# Database-Management-System

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
App/: config.py  constants.py  db.py  db_setup.py
App/routes/: __init__.py  api.py  base_crud.py  countries.py  energy.py  freshwater.py  ghg.py  health.py  login.py  shared.py  sustainability.py
Docs/architecture/: architecture.d2  database-schema.d2
frontend/css/js/: app.js
frontend/css/templates/: base.html  energy_form.html  energy_list.html  freshwater_form.html  ghg_form.html  ghg_list.html  health_form.html  login.html  sustainability_form.html
frontend/css/templates/_partials/: _flash_messages.html  _pagination.html
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py  002_add_passwords.py
react/: package-lock.json  package.json  vite.config.ts
react/src/: App.tsx
react/src/api/: auth.ts  client.ts  countries.ts  domain.ts
react/src/components/charts/: BarChart.tsx  LineChart.tsx  SnapshotWidget.tsx  TrendExplorer.tsx
react/src/contexts/: AuthContext.tsx
react/src/layouts/: MainLayout.tsx
react/src/pages/: AboutPage.tsx  CountriesPage.tsx  CountryProfilePage.tsx  DashboardPage.tsx  DomainListPage.tsx  LoginPage.tsx  RegionProfilePage.tsx
react/src/types/: index.ts
scripts/: load_all.py  load_countries.py  load_user.py
tests/: conftest.py  test_auth.py  test_security.py
