[project]
name = "wdi-database-management-system"
version = "0.1.0"
description = "Web-based database management and visualization platform for WDI data"
requires-python = ">=3.9"
license = { text = "Educational" }

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from e
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]       # sys.path must come before App imports
"migrations/versions/*.py" = []  # alembic-generated, lenient

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
